@@ -1,3 +1,7 @@
+2000-07-27  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Calib/SCUBA.pm (tau): Add caching
+
 2000-07-25  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Group.pm (membertagset): Add tags system
